--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/bjesuiter/bin2npm#readme",
   "dependencies": {
+    "@clack/prompts": "^0.6.3",
     "execa": "^7.1.1"
   }
 }
