--- a/package.json
+++ b/package.json
@@ -27,5 +27,8 @@
   "dependencies": {
     "@clack/prompts": "^0.6.3",
     "execa": "^7.1.1"
+  },
+  "devDependencies": {
+    "np": "^8.0.2"
   }
 }
