--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "description": "A helper cli which takes one or more binaries for different platforms and wraps them into an npm package for distribution",
   "bin": {
-    "bin2npm": "./src/cli.mjs"
+    "bin2npm": "./src/bin/cli.mjs"
   },
   "scripts": {
     "start": "node ./src/cli.mjs"
