--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   },
   "type": "module",
   "scripts": {
-    "start": "node ./src/cli.mjs"
+    "start": "deno run -A ./src/cli.ts"
   },
   "repository": {
     "type": "git",
