--- a/example/bin2npm.toml
+++ b/example/bin2npm.toml
@@ -1,1 +1,22 @@
 version = "0"
+
+[[binaries]]
+path = "bonnie-linux-amd64"
+# platform should be one of nodejs's os.platform() values:
+# for Node 16 LTS: 'aix', 'darwin', 'freebsd','linux', 'openbsd', 'sunos', and 'win32'
+# see https://nodejs.org/docs/latest-v16.x/api/os.html#osplatform
+platform = "linux"
+# arch should be one of nodejs's os.arch() values: 
+# for Node 16 LTS: 'arm', 'arm64', 'ia32', 'mips', 'mipsel', 'ppc', 'ppc64', 's390', 's390x', and 'x64'
+# see https://nodejs.org/docs/latest-v16.x/api/os.html#osarch
+arch = "x64"
+
+[[binaries]]
+path = "bonnie-macos-amd64"
+platform = "darwin"
+arch = "x64"
+
+[[binaries]]
+path = "bonnie-windows-amd64"
+platform = "win32"
+arch = "x64"
