add check for catching multiple registered binaries for the same platform and arch

--- a/example/bin2npm.toml
+++ b/example/bin2npm.toml
@@ -17,6 +17,18 @@ platform = "darwin"
 arch = "x64"
 
 [[binaries]]
-path = "bonnie-windows-amd64"
+path = "bonnie-windows-amd64.exe"
+platform = "win32"
+arch = "x64"
+
+# use for testing error: "Binary configured but not found!"
+# [[binaries]]
+# path = "bonnie-bob-amd64"
+# platform = "openbsd"
+# arch = "x64"
+
+# use for testing error: "Two or more binaries configured with same platform and arch!"
+[[binaries]]
+path = "bonnie-windows-amd64.exe"
 platform = "win32"
 arch = "x64"
