--- a/bin2npm.toml
+++ b/bin2npm.toml
@@ -1,5 +1,5 @@
 bin2NpmVersion = "0"
-outDir         = "npm/dist"
+outDir         = "npm"
 
 [targetPackageJson]
     name        = "bin2npm"
@@ -7,7 +7,7 @@ outDir         = "npm/dist"
     description = "A cli tool by @bjesuiter which takes one or more binaries for different platforms and wraps them into an npm package for distribution. Can also be used via bin2npm package on npmjs.org"
 
 [[binaries]]
-    path = "bin/bin2npm_linux_x64"
+    path = "compiled/bin2npm_linux_x64"
     # platform should be one of nodejs's os.platform() values:
     # for Node 16 LTS: 'aix', 'darwin', 'freebsd','linux', 'openbsd', 'sunos', and 'win32'
     # see https://nodejs.org/docs/latest-v16.x/api/os.html#osplatform
@@ -18,16 +18,16 @@ outDir         = "npm/dist"
     arch = "x64"
 
 [[binaries]]
-    path     = "bin/bin2npm_macos_x64"
+    path     = "compiled/bin2npm_macos_x64"
     platform = "darwin"
     arch     = "x64"
 
 [[binaries]]
-    path     = "bin/bin2npm_macos_arm"
+    path     = "compiled/bin2npm_macos_arm"
     platform = "darwin"
     arch     = "arm64"
 
 [[binaries]]
-    path     = "bin/bin2npm_windows_x64.exe"
+    path     = "compiled/bin2npm_windows_x64.exe"
     platform = "win32"
     arch     = "x64"
