add readme copy as extraAssets

--- a/bin2npm.toml
+++ b/bin2npm.toml
@@ -31,3 +31,7 @@ outDir         = "npm"
     path     = "compiled/bin2npm_windows_x64.exe"
     platform = "win32"
     arch     = "x64"
+
+[[extraAssets]]
+    from = "Readme.md"
+    to   = "Readme.md"
