--- a/deno.jsonc
+++ b/deno.jsonc
@@ -2,7 +2,7 @@
   "tasks": {
     "start": "deno run -A src/cli.ts",
     "dev": "deno run -A --watch src/cli.ts",
-    "pack-assets": "asset_builder > src-gen/assets.ts",
+    "pack-assets": "deno run --allow-read https://deno.land/x/asset_builder@1.0.4/asset_builder.ts > src-gen/assets.ts",
     "compile": "deno task compile-linux-x64 & deno task compile-windows-x64 & deno task compile-macos-x64 & deno task compile-macos-arm",
     "compile-base": "deno compile --allow-read='.' --allow-write='.' ",
     "compile-linux-x64": "deno task compile-base --output compiled/bin2npm_linux_x64 --target x86_64-unknown-linux-gnu src/cli.ts ",
