--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -15,6 +15,8 @@ jobs:
         # with:
         #     # The Deno version to install. Can be a semver version of a stable release, "canary" for the latest canary, or the Git hash of a specific canary release.
         #     deno-version: # optional, default is 1.x
+      - name: Check out repository code
+        uses: actions/checkout@v3
       - run: deno task pack-assets
       - run: deno task compile
     #   - run: deno task publish-npm
