--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -19,4 +19,5 @@ jobs:
         uses: actions/checkout@v3
       - run: deno task pack-assets
       - run: deno task compile
+      - run: deno task assemble-npm
     #   - run: deno task publish-npm
