--- a/deno.jsonc
+++ b/deno.jsonc
@@ -3,6 +3,7 @@
     "start": "deno run -A src/cli.ts",
     "dev": "deno run -A --watch src/cli.ts",
     "version": "deno run -A src/cli.ts --version",
+    "cache": "deno cache --reload --lock=deno.lock --lock-write src/cli.ts",
     "pack-assets": "deno run --allow-read https://deno.land/x/asset_builder@1.0.4/asset_builder.ts > src-gen/assets.ts",
     "compile": "deno task compile-linux-x64 & deno task compile-windows-x64 & deno task compile-macos-x64 & deno task compile-macos-arm",
     "compile-base": "deno compile --allow-read='.' --allow-write='.' ",
