--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -16,6 +16,9 @@ jobs:
         # You may pin to the exact commit or the version.
         # uses: denoland/setup-deno@61fe2df320078202e33d7d5ad347e7dcfa0e8f31
         uses: denoland/setup-deno@v1.1.2
+      - uses: actions/setup-node@v3
+        with:
+          node-version: '18'
         # with:
         #     # The Deno version to install. Can be a semver version of a stable release, "canary" for the latest canary, or the Git hash of a specific canary release.
         #     deno-version: # optional, default is 1.x
@@ -28,13 +31,23 @@ jobs:
       - run: deno task pack-assets
       - run: deno task compile
       - run: deno task assemble-npm
-      - name: Publish if version has been updated
-        uses: pascalgn/npm-publish-action@1.3.9
-        with: # All of theses inputs are optional
-          create_tag: 'false'
-          workspace: './npm'
-          publish_command: 'npm'
-        env: # More info about the environment variables in the README
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
-          NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # You need to set this in your repo settings
-
+      - id: publish
+        uses: JS-DevTools/npm-publish@v2
+        with:
+          token: ${{ secrets.NPM_TOKEN }}
+          package: npm
+          provenance: true
+          ignore-scripts: true
+          dry-run: true
+      - if: ${{ steps.publish.outputs.type }}
+        run: |
+          echo "Released new package ${{ steps.publish.outputs.id }}!"
+      # - name: Publish if version has been updated
+      #   uses: pascalgn/npm-publish-action@1.3.9
+      #   with: # All of theses inputs are optional
+      #     create_tag: 'false'
+      #     workspace: './npm'
+      #     publish_command: 'npm'
+      #   env: # More info about the environment variables in the README
+      #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} # Leave this as is, it's automatically generated
+      #     NPM_AUTH_TOKEN: ${{ secrets.NPM_AUTH_TOKEN }} # You need to set this in your repo settings
