--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -38,7 +38,7 @@ jobs:
           package: npm
           provenance: true
           ignore-scripts: true
-          dry-run: true
+          dry-run: false
       - if: ${{ steps.publish.outputs.type }}
         run: |
           echo "Released new package ${{ steps.publish.outputs.id }}!"
