--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -36,7 +36,7 @@ jobs:
         with:
           token: ${{ secrets.NPM_AUTH_TOKEN }}
           package: npm
-          provenance: true
+          provenance: false
           ignore-scripts: true
           dry-run: false
       - if: ${{ steps.publish.outputs.type }}
