--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,24 +1,27 @@
 {
-  "tasks": {
-    "start": "deno run -A src/cli.ts",
-    "dev": "deno run -A --watch src/cli.ts",
-    "version": "deno run -A src/cli.ts --version",
-    "cache": "deno cache --reload --lock=deno.lock --lock-write src/cli.ts",
-    "pack-assets": "deno run --allow-read https://deno.land/x/asset_builder@1.0.4/asset_builder.ts > src-gen/assets.ts",
-    "compile": "deno task compile-linux-x64 & deno task compile-windows-x64 & deno task compile-macos-x64 & deno task compile-macos-arm",
-    "compile-base": "deno compile --allow-read='.' --allow-write='.' ",
-    "compile-linux-x64": "deno task compile-base --output compiled/bin2npm_linux_x64 --target x86_64-unknown-linux-gnu src/cli.ts ",
-    "compile-windows-x64": "deno task compile-base --output compiled/bin2npm_windows_x64 --target x86_64-pc-windows-msvc src/cli.ts ",
-    "compile-macos-x64": "deno task compile-base --output compiled/bin2npm_macos_x64 --target x86_64-apple-darwin src/cli.ts ",
-    "compile-macos-arm": "deno task compile-base --output compiled/bin2npm_macos_arm --target aarch64-apple-darwin src/cli.ts ",
-    "run-compiled-macos": "compiled/bin2npm_macos_x64",
-    "assemble-npm": "deno run -A src/cli.ts --config bin2npm.toml",
-    // CAUTION: This publish task can take a long time, due to the big binaries included!
-    "publish-npm": "npm publish ./npm"
-  },
-  "imports": {
-    "cliffy/": "https://deno.land/x/cliffy@v0.25.7/",
-    "std/": "https://deno.land/std@0.190.0/",
-    "zod": "https://deno.land/x/zod@v3.21.4/mod.ts"
-  }
+	"tasks": {
+		"start": "deno run -A src/cli.ts",
+		"dev": "deno run -A --watch src/cli.ts",
+		"version": "deno run -A src/cli.ts --version",
+		"cache": "deno cache --reload --lock=deno.lock --lock-write src/cli.ts",
+		"pack-assets": "deno run --allow-read https://deno.land/x/asset_builder@1.0.4/asset_builder.ts > src-gen/assets.ts",
+		"compile": "deno task compile-linux-x64 & deno task compile-windows-x64 & deno task compile-macos-x64 & deno task compile-macos-arm",
+		"compile-base": "deno compile --allow-read='.' --allow-write='.' ",
+		"compile-linux-x64": "deno task compile-base --output compiled/bin2npm_linux_x64 --target x86_64-unknown-linux-gnu src/cli.ts ",
+		"compile-windows-x64": "deno task compile-base --output compiled/bin2npm_windows_x64 --target x86_64-pc-windows-msvc src/cli.ts ",
+		"compile-macos-x64": "deno task compile-base --output compiled/bin2npm_macos_x64 --target x86_64-apple-darwin src/cli.ts ",
+		"compile-macos-arm": "deno task compile-base --output compiled/bin2npm_macos_arm --target aarch64-apple-darwin src/cli.ts ",
+		"run-compiled-macos": "compiled/bin2npm_macos_x64",
+		"assemble-npm": "deno run -A src/cli.ts --config bin2npm.toml",
+		// CAUTION: This publish task can take a long time, due to the big binaries included!
+		"publish-npm": "npm publish ./npm"
+	},
+	"imports": {
+		"@cliffy/flags": "jsr:@cliffy/flags@^1.0.0-rc.7",
+		"@cliffy/prompt": "jsr:@cliffy/prompt@^1.0.0-rc.7",
+		"@std/fs": "jsr:@std/fs@^1.0.15",
+		"@std/path": "jsr:@std/path@^1.0.8",
+		"@std/toml": "jsr:@std/toml@^1.0.3",
+		"zod": "npm:zod@^3.24.2"
+	}
 }
