--- a/deno.jsonc
+++ b/deno.jsonc
@@ -23,5 +23,8 @@
 		"@std/path": "jsr:@std/path@^1.0.8",
 		"@std/toml": "jsr:@std/toml@^1.0.3",
 		"zod": "npm:zod@^3.24.2"
+	},
+	"lint": {
+		"include": ["examples/**", "src/**", "tests/**", "scripts/**"]
 	}
 }
