--- a/deno.jsonc
+++ b/deno.jsonc
@@ -10,6 +10,10 @@
 		"version": "deno run -A src/cli.ts --version",
 		"cache": "deno cache --reload --lock=deno.lock src/cli.ts",
 		"pack-assets": "deno run --allow-read jsr:@codemonument/asset-builder > src-gen/assets.ts",
+		// Publish this bin2npm to jsr
+		"dry": "deno publish --dry-run",
+		"publish": "deno publish",
+		// compile this bin2npm as binary for different platforms
 		"compile": "deno task compile-linux-x64 & deno task compile-windows-x64 & deno task compile-macos-x64 & deno task compile-macos-arm",
 		"compile-base": "deno compile --allow-read='.' --allow-write='.' ",
 		"compile-linux-x64": "deno task compile-base --output compiled/bin2npm_linux_x64 --target x86_64-unknown-linux-gnu src/cli.ts ",
