ignore more assets for JSR publish

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -6,6 +6,7 @@
 		".": "./src/cli.ts"
 	},
 	"include": ["src", "src-gen", "deno.jsonc", "deno.lock", "Readme.md"],
+	"exclude": [".github", ".vscode", "TODO.md", "assets_config.json", "bin2npm.toml", "example"],
 	"tasks": {
 		"start": "deno run -A src/cli.ts",
 		"dev": "deno run -A --watch src/cli.ts",
