--- a/deno.jsonc
+++ b/deno.jsonc
@@ -31,8 +31,12 @@
 		"compile-windows-x64": "deno task compile-base --output compiled/bin2npm_windows_x64 --target x86_64-pc-windows-msvc src/cli.ts ",
 		"compile-macos-x64": "deno task compile-base --output compiled/bin2npm_macos_x64 --target x86_64-apple-darwin src/cli.ts ",
 		"compile-macos-arm": "deno task compile-base --output compiled/bin2npm_macos_arm --target aarch64-apple-darwin src/cli.ts ",
-		"run-compiled-macos": "compiled/bin2npm_macos_x64",
+		"run-compiled-macos": "compiled/bin2npm_macos_arm",
+		// Examples
+		"example": "deno run -A src/cli.ts --config example/bin2npm.toml",
+		"example-jsr": "deno run -A jsr:@bjesuiter/bin2npm --config example/bin2npm.toml",
 		"assemble-npm": "deno run -A src/cli.ts --config bin2npm.toml",
+		"assemble-npm-jsr": "deno run -A jsr:@bjesuiter/bin2npm --config bin2npm.toml",
 		// CAUTION: This publish task can take a long time, due to the big binaries included!
 		"publish-npm": "npm publish ./npm"
 	},
