--- a/.github/workflows/deploy-npm.yml
+++ b/.github/workflows/deploy-npm.yml
@@ -1,9 +1,9 @@
 name: Deploy npm
 on:
   workflow_dispatch:
-  # push:
-  #   tags:
-  #     - '*'
+  push:
+    tags:
+      - '*'
 env:
   DENO_DIR: .deno-cache
 jobs:
@@ -11,7 +11,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Check out repository code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Setup Deno
         # You may pin to the exact commit or the version.
         # uses: denoland/setup-deno@61fe2df320078202e33d7d5ad347e7dcfa0e8f31
